# connect4_solver

./: LICENSE  README.md  build.sh  callgrind.out.9046_sequntial_solver_profile  cuda-timing.sh  omp-timing.sh  seq-timing.sh
src/: CMakeLists.txt  gameTreeSearchSolver.hpp  main.cpp  tournament.hpp
src/connectFourAssets/: CMakeLists.txt  board.cpp  board.hpp  player.hpp  slotStatus.hpp
src/cudaSolver/: CMakeLists.txt  cudaSolver.cu  cudaSolver.cuh
src/mpSolver/: CMakeLists.txt  boardMp.cpp  boardMp.hpp  mpSolver.cpp  mpSolver.hpp
src/sequentialSolver/: CMakeLists.txt  boardSeq.cpp  boardSeq.hpp  sequentialSolver.cpp  sequentialSolver.hpp
